Downgrade java version to 1.8 so processor can support more variety of projects